# opengl-learn

./: BaseTriangle.cpp  BaseTriangle.h  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  Global.cpp  Global.h  main.cpp  readme.md
glad/include/glad/: glad.h
glad/src/: glad.c
